--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <header class="container">
-        <div class="header-empty-1"></div>
-        <div class="header-empty-2"></div>
+    <header class="header">
+        <div class="header header--small"></div>
+        <div class="header header--big"></div>
     </header>
     <div class="container">
-        <div class="content-container">
             <div class="slider">
                 <div class="top-slider-wrapper">
                     <div class="top-slider">
@@ -35,7 +34,6 @@
                             <h1>Lorem ipsum dolor sit amet consectetuer adipiscing elit</h1>
                             <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
                         </div>
-                    
                 </div>
                 </div>
                 <div class="bottom-slider-wrapper">
@@ -56,7 +54,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </div>
     <footer class="container">
         <div class="footer"></div>
