--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
     </div>
-    <footer class="container">
+    <footer class="footer">
         <div class="footer"></div>
     </footer>
     
