--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <img src="assets/slider-image-2.jpg" class="image">
                     <img src="assets/slider-image-3.jpg" class="image">
                 </div>
-                <div class="button-container">
+                <div class="button-container" id="button-container">
                     <button id="next" class="button-next-active"></button>
                     <button id="previous" class="button-previous-active"></button>
                 </div>
