--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="header header--small"></div>
         <div class="header header--big"></div>
     </header>
-    <div class="container">
-        <div class="slider">
+    <main class="container">
+        <section class="slider">
             <div class="top-slider">
                 <img src="assets/slider-image-9.jpg" class="image">
                 <img src="assets/slider-image-3.jpg" class="image">
@@ -48,14 +48,14 @@
                 </div>
             </div>
 
-        </div>
+        </section>
         <div class="text-container">
             <h1>Lorem ipsum dolor sit amet consectetuer adipiscing elit</h1>
             <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
         </div>
 
 
-    </div>
+    </main>
     <footer class="footer">
         <div class="footer"></div>
     </footer>
