fixed top slider

--- a/index.html
+++ b/index.html
@@ -17,19 +17,20 @@
     </header>
     <main class="container">
         <section class="slider">
-            <div class="top-slider">
-                <img src="assets/slider-image-9.jpg" class="image">
-                <img src="assets/slider-image-3.jpg" class="image">
-                <img src="assets/slider-image-1.jpg" class="image">
-                <img src="assets/slider-image-2.jpg" class="image">
-                <img src="assets/slider-image-4.jpg" class="image">
-                <img src="assets/slider-image-7.jpg" class="image">
-                <img src="assets/slider-image-6.jpg" class="image">
-                <img src="assets/slider-image-8.jpg" class="image">
-                <img src="assets/slider-image-5.jpg" class="image">
+            <div class="top-slider-wrapper">
+                <div class="top-slider">
+                    <img src="assets/slider-image-9.jpg" class="image">
+                    <img src="assets/slider-image-3.jpg" class="image">
+                    <img src="assets/slider-image-1.jpg" class="image">
+                    <img src="assets/slider-image-2.jpg" class="image">
+                    <img src="assets/slider-image-4.jpg" class="image">
+                    <img src="assets/slider-image-7.jpg" class="image">
+                    <img src="assets/slider-image-6.jpg" class="image">
+                    <img src="assets/slider-image-8.jpg" class="image">
+                    <img src="assets/slider-image-5.jpg" class="image">
+                </div>
             </div>
-
-
+            
             <div class="bottom-slider-wrapper">
                 <div class="bottom-slider">
                     <img src="assets/slider-image-5.jpg" class="image">
