--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slider</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="src/script.js"></script>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
                     <img src="assets/slider-image-5.jpg" class="image">
                 </div>
             </div>
-            
+
             <div class="bottom-slider-wrapper">
                 <div class="bottom-slider">
                     <img src="assets/slider-image-5.jpg" class="image">
