fixed button css

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                     <img src="assets/slider-image-3.jpg" class="image">
                 </div>
                 <div class="button-container" id="button-container">
-                    <button id="next" class="button-next-active"></button>
-                    <button id="previous" class="button-previous-active"></button>
+                    <button id="next"></button>
+                    <button id="previous"></button>
                 </div>
             </div>
 
