--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +8,6 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="src/script.js"></script>
 </head>
-
 <body>
     <header class="header">
         <div class="header header--small"></div>
@@ -18,6 +16,7 @@
     <main class="container">
         <section class="slider">
             <div class="top-slider-wrapper">
+
                 <div class="top-slider">
                     <img src="assets/slider-image-9.jpg" class="image">
                     <img src="assets/slider-image-3.jpg" class="image">
@@ -29,9 +28,11 @@
                     <img src="assets/slider-image-8.jpg" class="image">
                     <img src="assets/slider-image-5.jpg" class="image">
                 </div>
+
             </div>
 
             <div class="bottom-slider-wrapper">
+
                 <div class="bottom-slider">
                     <img src="assets/slider-image-5.jpg" class="image">
                     <img src="assets/slider-image-7.jpg" class="image">
@@ -43,24 +44,24 @@
                     <img src="assets/slider-image-2.jpg" class="image">
                     <img src="assets/slider-image-3.jpg" class="image">
                 </div>
+        
                 <div class="button-container" id="button-container">
                     <button id="next"></button>
                     <button id="previous"></button>
                 </div>
-            </div>
 
+            </div>
         </section>
-        <div class="text-container">
+        
+        <section class="text-container">
             <h1>Lorem ipsum dolor sit amet consectetuer adipiscing elit</h1>
             <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
-        </div>
-
+        </section>
 
     </main>
+
     <footer class="footer">
         <div class="footer"></div>
     </footer>
-
 </body>
-
 </html>
