--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slider</title>
-    <link rel="stylesheet" href="src/styles/css/compiled-styles.min.css">
+    <link rel="stylesheet" href="src/styles/css/styles-compiled.css">
     
 </head>
 <body>
